External_Nginx_Ingress_Controller_Cert_Manager/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: kuard
  annotations:
    kubernetes.io/ingress.class: "nginx"    
    cert-manager.io/issuer: "letsencrypt-prod"

spec:
  tls:
  - hosts:
    - 1386e4a2.westus.cloudapp.azure.com
    secretName: quickstart-example-tls
  rules:
  - host: 1386e4a2.westus.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuard
            port:
              number: 80
